# polars_in_rust

./: .gitignore  Cargo.toml
dataset/: output.csv
src/: main.rs
