[package]
name = "polars_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = [
  "ndarray",
  "peaks",
  "serde",
  "describe",
] }
polars-core = "0.35.4"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
