[package]
name = "polars_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.35.4", features = [
  "ndarray",
  "peaks",
  "serde",
  "describe",
  "lazy",
  "dtype-datetime",
  "json",
  "strings",
  "lazy_regex",
  "streaming",
] }
polars-core = "0.35.4"
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
chrono = "0.4"
rand = "0.8"
